# makem4b

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  makem4b.py  pyproject.toml
.github/workflows/: docker-build.yaml  publish.yaml
docker/: entrypoint.sh
makem4b/: __init__.py  __main__.py  analysis.py  base.py  cli.py  constants.py  emoji.py  ffmpeg.py  intermediates.py  metadata.py  models.py  types.py  utils.py
makem4b/commands/: merge.py  recursive.py
